--- a/traktor-fibonacci-caller/traktor-test-http-caller.csproj
+++ b/traktor-fibonacci-caller/traktor-test-http-caller.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Traktor" Version="1.7408.0" />
+    <PackageReference Include="Traktor" Version="1.*" />
   </ItemGroup>
 
 </Project>
