inital sniffing with scapy
inital sniffing with scapy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,9 @@ services:
     traktor-fibonacci-caller:
         #image: fibo-caller
         build: ./traktor-fibonacci-caller/
+        build:
+            context: ./traktor-fibonacci-caller/
+            dockerfile: Dockerfile_interceptor
         ports:
             - "8085:8085"
         environment: 
